--- a/DOM/1.html
+++ b/DOM/1.html
@@ -17,9 +17,10 @@
         <h3>heading 3</h3>
         <p>Lorem ipsum dolor sit amet.</p>
         <ul>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
         </ul>
     </div>
 </body>
